bdr.BDR.scala.error
Erreur de compilation :
BDR:35: error: ';' expected but 'else' found.
  else {fini = true}
  ^